2018-10-12   Mark Hatle <mark.hatle@windriver.com>
	* testsuite/reloc12.sh: Detect if compiler/linker support test

2018-10-12   Robert Yang <liezhi.yang@windriver.com>
	* src/arch-mips.c: Make tls offset optional on tls usage

2018-10-12   Sergei Trofimovich <slyfox@gentoo.org>
	* src/arch-x86_64.c, src/dso.c, src/prelink.h: Allow prelink of
	pie executables with COPY relocs

2018-10-12   Sergei Trofimovich <slyfox@gentoo.org>
	* tessuite/functions.sh: Avoid timestamp drift

2018-10-12   Joseph Myers <joseph@codesourcery.com>
	* testsuite/unprel1.sh: Fix for cross testing

2018-10-12   Kyle Russell <bkylerussell@gmail.com>
	* src/conflict.c, src/undo.c: Add knowledge of .data.rel.ro for
	read-only dynamic symbols

2018-10-12   Kyle Russell <bkylerussell@gmail.com>
	* src/rtld/dl-lookupX.h: Fix rtld segfault when _dl_lookup_symbol_x
	is NULL on protected symbol relocations
	* testsuite/Makefile.am, testsuite/reloc12.c, testsuite/reloc12.h,
	testsuite/reloc12.sh, testsuite/reloc12lib1.c, testsuite/reloc12lib2.c:
	Add a new test for these relocations

2018-10-12   Mark Hatle <mark.hatle@windriver.com>
	* Add 'Developer's Certificate of Origin' to patch requirements

2018-08-29   Khem Raj <raj.khem@gmail.com>
	* src/elf.h: Add RISC-V defines
	* src/rtld/dl-tls.c: Add RISC-V support
	* src/rtld/rtld.c: Add RISC-V support

2018-08-29  Robert Yang  <liezhi.yang@windriver.com>
	* src/dso.c: use ehdr.e_shstrndx as index

2017-06-20  Andrew Stubbs  <ams@codesourcery.com>
	* src/arch-x86_64.c (x86_64_prelink_conflict_rela): Also convert
	R_X86_64_32 conflicts to R_X86_64_IRELATIVE for ifuncs.
	* src/arch-x86_64.c (PL_ARCH(x32)): Set mmap_end to 0x60000000.

2017-06-20  Joseph Myers  <joseph@codesourcery.com>
	* src/rtld/rtld.c (load_ld_so_conf): Add argument use_x32.
	(main): Update call to load_ld_so_conf.

2017-06-20   Kyle Russell <bkylerussell@gmail.com>
	* src/rtld/rtld.c: Add missing DT_NEEDED DSOs to needed_list

2017-06-20   Mark Hatle <mark.hatle@windriver.com>